WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
304611
Promise.any should create AggregateErrors directly
https://bugs.webkit.org/show_bug.cgi?id=304611
Summary
Promise.any should create AggregateErrors directly
Shu-yu Guo
Reported
2025-12-22 13:49:58 PST
rdar://167013937
Attachments
Add attachment
proposed patch, testcase, etc.
Shu-yu Guo
Comment 1
2025-12-22 15:12:37 PST
Pull request:
https://github.com/WebKit/WebKit/pull/55808
EWS
Comment 2
2025-12-22 16:13:28 PST
Committed
304884@main
(74119f1b889e): <
https://commits.webkit.org/304884@main
> Reviewed commits have been landed. Closing PR #55808 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug